k8s/test/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
  namespace: test  # Change to 'prod' for production
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
