k8s/test/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: test  
spec:
  ports:
    - port: 6379
  selector:
    app: redis
